rstudioapi 0.5 (unreleased)
--------------------------------------------------------------------------------

* Add askForPassword function

rstudioapi 0.4
--------------------------------------------------------------------------------

* Add API methods for interacting with a document open in RStudio: 'insertText()', 'modifyRange()' and 'getActiveDocumentContext()'.

rstudioapi 0.3
--------------------------------------------------------------------------------

* Add stub and documentation for sourceMarker function


rstudioapi 0.2
--------------------------------------------------------------------------------

* Compatibility with calling conventions for RStudio v0.99

* Stubs and documentation for versionInfo, previewRd, and viewer functions


rstudioapi 0.1
--------------------------------------------------------------------------------

Initial release to CRAN
