@@ -18,6 +18,7 @@ export(document_position)
 export(document_range)
 export(findFun)
 export(getActiveDocumentContext)
+export(getActiveProject)
 export(getVersion)
 export(hasFun)
 export(insertText)
